--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tool="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.setting.SettingFragment">
 
     <LinearLayout
@@ -22,6 +23,20 @@
             android:textAlignment="center"
             android:layout_marginTop="30dp"
             android:textSize="30sp"/>
+
+        <TextView
+            android:id="@+id/login_email_account_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"
+            android:layout_marginTop="15dp"
+            android:textAlignment="center"
+            android:background="@color/kDarkYellow"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            tools:text="ログイン：lee.hyungi@inwc.co.jp"/>
 
         <Button
             android:id="@+id/login_button"
