--- a/app/src/main/res/layout/recyclerview_commuting_data.xml
+++ b/app/src/main/res/layout/recyclerview_commuting_data.xml
@@ -52,10 +52,10 @@
                             android:src="@drawable/start_work"/>
                         <TextView
                             android:id="@+id/start_work_hour"
-                            android:layout_width="wrap_content"
+                            android:layout_width="100dp"
                             android:layout_height="wrap_content"
                             android:padding="2dp"
-                            android:text="00:00 AM"
+                            android:text="@{comdata.start_time}"
                             android:textAlignment="center"
                             android:textColor="@color/colorBlack"
                             android:textSize="20sp"
@@ -80,10 +80,10 @@
                             android:src="@drawable/end_work"/>
                         <TextView
                             android:id="@+id/end_work_hour"
-                            android:layout_width="wrap_content"
+                            android:layout_width="100dp"
                             android:layout_height="wrap_content"
                             android:padding="2dp"
-                            android:text="00:00 PM"
+                            android:text="@{comdata.leave_time}"
                             android:textAlignment="center"
                             android:textColor="@color/colorBlack"
                             android:textSize="20sp"
@@ -100,11 +100,11 @@
                                 android:src="@drawable/overtime_work"/>
                             <TextView
                                 android:id="@+id/overtime_work_hour"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:padding="2dp"
                                 android:layout_gravity="center"
-                                android:text="00:00 PM"
+                                android:text="@{comdata.over_time}"
                                 android:textAlignment="center"
                                 android:textColor="@color/colorBlack"
                                 android:textSize="20sp"
@@ -127,7 +127,7 @@
                         android:paddingLeft="10dp"
                         android:paddingBottom="2dp"
 
-                        android:text="2020/05/14(木)"
+                        android:text="@{comdata.date}"
                         android:background="@color/kDarkYellow"
                         android:textAlignment="center"
                         android:textColor="@color/colorBlack"
@@ -135,7 +135,7 @@
                         android:textStyle="bold" />
 
                     <RelativeLayout
-                        android:id="@+id/layout_like"
+                        android:id="@+id/detail_button"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
                         android:paddingLeft="15dp"
